--- a/src/app/dashboard/picture-page/picture-page.component.scss
+++ b/src/app/dashboard/picture-page/picture-page.component.scss
@@ -1,3 +1,8 @@
 .design {
-  background-color: rgba(18, 231, 231, 0.747);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  min-height: 60vh;
+  background: linear-gradient(to right top, #65dfc9, #6cdbeb);
 }
+
