--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -1,17 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
-  <div class="container">
-    <a class="navbar-brand text-uppercase fontSize fs-3" href="#"
+<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-info">
+  <div class="container fw-bold">
+    <a
+      class="navbar-brand text-uppercase fw-bold fs-3"
+      style="color: white"
+      href="#"
       >Md. Foridul Islam</a
     >
     <div class="d-flex justify-content-center"></div>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#"><i class="bi bi-linkedin"></i></a>
+        <a class="nav-link" style="color: white" href="#"
+          ><i class="bi bi-linkedin"></i
+        ></a>
       </li>
 
       <li class="nav-item">
         <a
           class="nav-link"
+          style="color: white"
           href="https://github.com/foridulislam21"
           target="_blank"
         >
@@ -21,6 +27,7 @@
       <li class="nav-item">
         <a
           class="nav-link"
+          style="color: white"
           href="https://web.facebook.com/forid.islam20/"
           target="_blank"
         >
@@ -45,13 +52,13 @@
     >
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">About Me</a>
+          <a class="nav-link"  style="color: white" href="#">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Interests</a>
+          <a class="nav-link"  style="color: white" href="#">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link"  style="color: white" href="#">Contact</a>
         </li>
       </ul>
     </div>
