--- a/src/app/dashboard/picture-page/picture-page.component.html
+++ b/src/app/dashboard/picture-page/picture-page.component.html
@@ -1,16 +1,12 @@
 <div class="design">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="text-center">
-        <img
-          src="../../../assets/images/1.jpg"
-          class="rounded-circle border border-5 mt-2"
-          style="max-height: 220px"
-          alt="..."
-        />
-        <p class="fs-1 mt-3">Md. Foridul Islam</p>
-        <p class="fs-2 mt-3">Software Engineer, Dhaka, Bangladesh.</p>
-      </div>
-    </div>
+  <div class="text-center">
+    <img
+      src="../../../assets/images/1.jpg"
+      class="rounded-circle mt-2 border border-info"
+      style="max-height: 220px"
+      alt="..."
+    />
+    <p class="fs-1 fw-bold lh-base" style="color: white">Md. Foridul Islam</p>
+    <p class="fs-4 fw-bold">Software Engineer, Dhaka, Bangladesh.</p>
   </div>
 </div>
