working with firebase cloud database

--- a/src/app/dashboard/about-me/about-me.component.html
+++ b/src/app/dashboard/about-me/about-me.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="row">
     <div class="col-md-6 fs-6 mt-3 lh-base">
-      <p *ngFor="let item of team$ | async">
+      <p *ngFor="let item of abouts">
         {{ item.description }}
       </p>
     </div>
