--- a/src/app/dashboard/about-me/about-me.component.html
+++ b/src/app/dashboard/about-me/about-me.component.html
@@ -1,13 +1,205 @@
-<div class="container">
-  <p class="fs-2 text-center fw-bold mt-5">About Me</p>
-  <div class="text-center styling">
-    <i class="bi bi-star-fill"></i>
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-info">
+  <div class="container fw-bold">
+    <a
+      class="navbar-brand text-uppercase fw-bold fs-3"
+      style="color: white"
+      href="#"
+      >Md. Foridul Islam</a
+    >
+    <div class="d-flex justify-content-center"></div>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          style="color: white"
+          href="https://www.linkedin.com/in/forid-islam-099860135/"
+          target="_blank"
+          ><i class="bi bi-linkedin"></i
+        ></a>
+      </li>
+
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          style="color: white"
+          href="https://github.com/foridulislam21"
+          target="_blank"
+        >
+          <i class="bi bi-github"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          style="color: white"
+          href="https://web.facebook.com/forid.islam20/"
+          target="_blank"
+        >
+          <i class="bi bi-facebook"></i>
+        </a>
+      </li>
+    </ul>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div
+      class="collapse navbar-collapse justify-content-end text-uppercase fs-4"
+      id="navbarNav"
+    >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" style="color: white" href="#about">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" style="color: white" href="#project">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" style="color: white" href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
   </div>
-  <div class="row">
-    <div class="col-md-6 fs-6 mt-3 lh-base">
-      <p *ngFor="let item of abouts">
-        {{ item.description }}
+</nav>
+<!--Bio-->
+<section class="bio">
+  <div class="container">
+    <div class="text-center">
+      <img
+        src="../../../assets/images/1.jpg"
+        class="rounded-circle mt-2 border border-info"
+        style="max-height: 220px"
+        alt="..."
+      />
+      <p class="fs-1 fw-bold lh-base" style="color: white">Md. Foridul Islam</p>
+      <p class="fs-4 fw-bold">
+        Full Stack Software Engineer, Dhaka, Bangladesh.
       </p>
     </div>
   </div>
-</div>
+</section>
+<!--Aoout Me-->
+<section id="about">
+  <div *ngIf="loadSpinner" class="linear-background"></div>
+  <div *ngIf="loadSpinner == false" class="container">
+    <p class="fs-2 text-center text-uppercase fw-bold mt-5">About Me</p>
+    <div class="text-center styling">
+      <i class="bi bi-star-fill"></i>
+    </div>
+    <div class="row">
+      <div class="col-md-6 mt-5">
+        <p class="fs-5 lh-base" *ngFor="let item of abouts">
+          {{ item.description }}
+        </p>
+        <p class="fs-5">
+          <a
+            class="mr-1"
+            href="https://www.linkedin.com/in/forid-islam-099860135/"
+            target="_blank"
+            >See my LinkedIn profile</a
+          >for more career details.
+        </p>
+      </div>
+      <div class="col-md-6 mt-5">
+        <p class="fw-bold fs-2 text-uppercase">HighLight</p>
+        <ul class="fs-5 1h-base">
+          <li class="mt-4">
+            I got training from
+            <a href="https://pencilbox.edu.bd/" target="_blank"
+              >PencilBox Training Institute.</a
+            >
+          </li>
+          <li class="mt-4">
+            I complete my internship period at
+            <a href="https://enlightsolution.com/" target="_blank"
+              >Enlight Solutions</a
+            >
+          </li>
+          <li class="mt-4">
+            I got train from
+            <a
+              href="https://www.udemy.com/user/md-foridul-islam-5/"
+              target="_blank"
+              >Udemy</a
+            >
+            on
+            <a
+              href="https://github.com/foridulislam21/E-Commerce-App"
+              target="_blank"
+              >E-Commerce Application</a
+            >
+          </li>
+          <li class="mt-4">I can work under pressure.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+<!---Projects----->
+<section id="project" class="projects">
+  <div *ngIf="loadSpinner" class="linear-background"></div>
+  <div class="container py-4">
+    <p class="fs-2 text-center text-uppercase fw-bold" style="color: white">
+      Projects
+    </p>
+    <div class="text-center star">
+      <i class="bi bi-star-fill" style="color: white"></i>
+    </div>
+    <div class="row mt-3" style="color: white">
+      <div class="col-lg-6">
+        <p class="fs-5">My personal interests include:</p>
+        <ul class="mt-2">
+          <li>
+            <p class="fs-5 fw-bold">E-Commerce Application</p>
+            <ul class="fs-6">
+              <li>Build with Angular</li>
+              <li>For RealTime database I use Firebase</li>
+              <li>Hosting it on Firebase</li>
+              <li>
+                <a
+                  style="color: white"
+                  href="https://midstreetcafe-a49a2.firebaseapp.com/"
+                  target="_blank"
+                  >Click on it for take a look</a
+                >
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-6">
+        <p class="fs-3 fw-bold">CURRENT JOB(Learning)</p>
+        <ul class="mt-2">
+          <li>
+            <p class="fs-5 fw-bold">E-Commerce Application</p>
+            <ul class="fs-6">
+              <li>
+                Learn how to use the Repository, Unit of Work and specification
+                pattern in .net core
+              </li>
+              <li>Using ASP.NET Identity for login and registration</li>
+              <li>Using Redis to store the shopping basket</li>
+              <li>
+                Accepting payments via Stripe using the new EU standards for 3D
+                secure
+              </li>
+              <li>Publishing the application to Linux</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+<!----Contact----->
+<section id="contact" class="contact">
+  <div *ngIf="loadSpinner" class="linear-background"></div>
+  <app-contact></app-contact>
+</section>
