Update from angular 10 to 11

--- a/src/app/dashboard/about-me/about-me.component.html
+++ b/src/app/dashboard/about-me/about-me.component.html
@@ -3,7 +3,7 @@
     <a
       class="navbar-brand text-uppercase fw-bold fs-3"
       style="color: white"
-      href="#"
+      href="#forid"
       >Md. Foridul Islam</a
     >
     <div class="d-flex justify-content-center"></div>
@@ -69,7 +69,7 @@
   </div>
 </nav>
 <!--Bio-->
-<section class="bio">
+<section id="forid" class="bio">
   <div class="container">
     <div class="text-center">
       <img
@@ -203,3 +203,8 @@
   <div *ngIf="loadSpinner" class="linear-background"></div>
   <app-contact></app-contact>
 </section>
+<footer class="footer mt-3 py-3 bg-info">
+  <div class="container text-center" style="color: white;">
+    <span class="">Copyright©2021</span>
+  </div>
+</footer>
