--- a/src/app/dashboard/contact/contact.component.html
+++ b/src/app/dashboard/contact/contact.component.html
@@ -3,12 +3,98 @@
   <div class="text-center styling">
     <i class="bi bi-star-fill"></i>
   </div>
-  <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-  </div>
-  <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  <div class="row">
+    <div class="col-md-6 offset-md-3 mt-5">
+      <form [formGroup]="FormData" (ngSubmit)="sendMessage(FormData.value)">
+        <div class="form-group">
+          <label for="fullname">Full Name</label>
+          <input
+            type="text"
+            class="form-control"
+            name="fullname"
+            placeholder="Full Name"
+            formControlName="fullname"
+          />
+          <span
+            class="text-danger"
+            *ngIf="
+              FormData.get('fullname').invalid &&
+              FormData.get('fullname').touched &&
+              FormData.get('fullname').errors['required']
+            "
+          >
+            Name is required.
+          </span>
+        </div>
+        <div class="form-group">
+          <label for="Email">Email Address</label>
+          <input
+            type="email"
+            class="form-control"
+            name="email"
+            aria-describedby="emailHelp"
+            placeholder="Enter email"
+            formControlName="email"
+          />
+          <span
+            class="text-danger"
+            *ngIf="
+              FormData.get('email').invalid &&
+              FormData.get('email').touched &&
+              FormData.get('email').errors['required']
+            "
+          >
+            Email address required.
+          </span>
+          <span
+            class="text-danger"
+            *ngIf="
+              FormData.get('email').invalid &&
+              FormData.get('email').touched &&
+              FormData.get('email').errors['pattern']
+            "
+          >
+            Email address is not valid.
+          </span>
+        </div>
+        <div class="form-group">
+          <label for="fullname">Company Name</label>
+          <input
+            type="text"
+            class="form-control"
+            name="Company"
+            placeholder="Company Name"
+            formControlName="company"
+          />
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea
+            class="form-control"
+            formControlName="message"
+            name="message"
+          >
+          </textarea>
+          <span
+            class="text-danger"
+            *ngIf="
+              FormData.get('message').invalid &&
+              FormData.get('message').touched &&
+              FormData.get('message').errors['required']
+            "
+          >
+            Message is required.
+          </span>
+        </div>
+        <button
+          type="submit"
+          [disabled]="!FormData.valid"
+          mat-raised-button
+          color="accent"
+        >
+          Send
+        </button>
+      </form>
+    </div>
   </div>
 </div>
