working with auth

--- a/src/app/dashboard/about-me/about-me.component.html
+++ b/src/app/dashboard/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-info">
+<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-info">
   <div class="container fw-bold">
     <a
       class="navbar-brand text-uppercase fw-bold fs-3"
