--- a/src/app/dashboard/about-me/about-me.component.html
+++ b/src/app/dashboard/about-me/about-me.component.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-info">
+<nav class="navbar navbar-inverse navbar-expand-lg sticky-top navbar-light bg-info">
   <div class="container fw-bold">
     <a
-      class="navbar-brand text-uppercase fw-bold fs-3"
+      class="navbar-brand text-uppercase name-full fw-bold fs-3"
       style="color: white"
       href="#forid"
       >Md. Foridul Islam</a
     >
     <div class="d-flex justify-content-center"></div>
-    <ul class="navbar-nav">
+    <ul class="navbar-nav list-icon">
       <li class="nav-item">
         <a
           class="nav-link"
@@ -70,20 +70,18 @@
 </nav>
 <!--Bio-->
 <section id="forid" class="bio">
-  <div class="container">
     <div class="text-center">
       <img
         src="../../../assets/images/1.jpg"
         class="rounded-circle mt-2 border border-info"
         style="max-height: 220px"
-        alt="..."
+        alt="Md. Foridul Islam"
       />
       <p class="fs-1 fw-bold lh-base" style="color: white">Md. Foridul Islam</p>
       <p class="fs-4 fw-bold">
-        Full Stack Software Engineer, Dhaka, Bangladesh.
+        Full Stack Developer, Dhaka, Bangladesh.
       </p>
     </div>
-  </div>
 </section>
 <!--Aoout Me-->
 <section id="about">
@@ -175,10 +173,14 @@
         </ul>
       </div>
       <div class="col-lg-6">
-        <p class="fs-3 fw-bold">CURRENT JOB(Learning)</p>
+        <p class="fs-3 fw-bold">CURRENT JOB</p>
+        <ul>
+          <p class="fs-4 fw-bold">Company Name: <a href="https://www.udemy.com/user/md-foridul-islam-5/" target="_blank" rel="noopener noreferrer">Udemy</a></p>
+          <p class="fs-4 fw-bold">Job & Responsibility: <strong>Professional Training</strong></p>
+        </ul>
         <ul class="mt-2">
           <li>
-            <p class="fs-5 fw-bold">E-Commerce Application</p>
+            <p class="fs-5 fw-bold">Project: E-Commerce Application</p>
             <ul class="fs-6">
               <li>
                 Learn how to use the Repository, Unit of Work and specification
@@ -191,6 +193,27 @@
                 secure
               </li>
               <li>Publishing the application to Linux</li>
+            </ul>
+          </li>
+        </ul>
+        <p class="fs-3 fw-bold">Previous JOB</p>
+        <ul>
+          <p class="fs-4 fw-bold">Company Name: <a href="https://enlightsolution.com/" target="_blank">Enlight Solutions</a></p>
+          <p class="fs-4 fw-bold">Job & Responsibility: Internship Program</p>
+        </ul>
+        <ul class="mt-2">
+          <li>
+            <p class="fs-5 fw-bold">Project: Assessment Management System</p>
+            <ul class="fs-6">
+              <li>
+                Learn how to use the Repository Pattern and also apply bussines logic layer artitecture.
+              </li>
+              <li>Using JWT Authentication for login and registration</li>
+              <li>Using <strong>Bootstrap & Material Design</strong> for creating a page. </li>
+              <li>
+                Learn how to use <strong>Dependency Inversion Principle</strong> in a project.
+              </li>
+              <li>Create documentation for every particular work that I am done.</li>
             </ul>
           </li>
         </ul>
