--- a/src/app/admin/auth/forgot-password/forgot-password.component.html
+++ b/src/app/admin/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,40 @@
-<p>forgot-password works!</p>
+<div class="backColor row">
+  <div class="col-md-5 offset-md-5">
+    <mat-card class="example-card mt-5">
+      <p class="text-center fw-bold fs-3">Reset Password</p>
+      <mat-card-subtitle>
+        <p>Please enter your email address to request a password reset.</p>
+      </mat-card-subtitle>
+      <mat-card-content>
+        <form
+          [formGroup]="FormData"
+          class=""
+          (ngSubmit)="resetPassword(FormData.value)"
+        >
+          <app-text-input
+            formControlName="email"
+            [label]="'Email Address'"
+            [type]="'email'"
+          ></app-text-input>
+          <div class="row">
+            <button
+              class="d-grid col-11 mx-auto"
+              [disabled]="!FormData.valid"
+              mat-raised-button
+              color="accent"
+            ></button>
+          </div>
+        </form>
+      </mat-card-content>
+      <div class="form-group">
+        <span class=""
+          >Go back to?<a
+            class="ml-2"
+            routerLink="/master-admin/sign-in"
+            >Log In</a
+          ></span
+        >
+      </div>
+    </mat-card>
+  </div>
+</div>
