--- a/src/app/admin/auth/register/register.component.html
+++ b/src/app/admin/auth/register/register.component.html
@@ -1,11 +1,20 @@
-<div class="container-fluid">
-  <div class="d-flex justify-content-center mt-5">
-    <mat-card class="example-card">
+<div class="backColor row">
+  <div class="col-md-5 offset-md-5">
+    <mat-card class="example-card mt-5">
       <p class="text-center fw-bold fs-3">Sign Up</p>
+      <div class="d-flex justify-content-center">
+        <img
+          class="justify-content-center"
+          mat-card-sm-image
+          src="assets/login-img (1).png"
+          alt="Logo"
+          srcset=""
+        />
+      </div>
       <mat-card-content>
         <form
           [formGroup]="FormData"
-          class="mt-5"
+          class=""
           (ngSubmit)="register(FormData.value)"
         >
           <app-text-input
@@ -20,9 +29,9 @@
             [label]="'Password'"
             [type]="'password'"
           ></app-text-input>
-          <div class="row g-0">
+          <div class="row">
             <button
-              class="g-0"
+              class="d-grid col-11 mx-auto"
               [disabled]="!FormData.valid"
               mat-raised-button
               color="accent"
@@ -32,6 +41,35 @@
           </div>
         </form>
       </mat-card-content>
+      <div class="form-group text-center">
+        <span class="text-nowrap">Or</span>
+      </div>
+      <div class="form-group">
+        <div class="row d-flex">
+          <button
+            class="d-grid col-11 mx-auto justify-content-start"
+            mat-raised-button
+            color="primary"
+          >
+            <i class="bi bi-google mr-5"></i>
+            Continue with Google
+          </button>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="row">
+          <button
+            class="d-grid col-11 mx-auto justify-content-start"
+            mat-raised-button
+            color="primary"
+          >
+            <i class="bi bi-facebook mr-5"></i>Continue with Facebook
+          </button>
+        </div>
+      </div>
+      <div class="form-group">
+        <span class="">Already have an account?<a class="ml-2" routerLink="/master-admin">Log In</a></span>
+      </div>
     </mat-card>
   </div>
 </div>
