--- a/src/app/admin/auth/register/register.component.scss
+++ b/src/app/admin/auth/register/register.component.scss
@@ -1,10 +1,9 @@
-// main {
-//   min-height: 100vh;
-//   background: linear-gradient(to right top, #65dfc9, #6cdbeb);
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
-.example-card {
-  max-width: 400px;
+.backColor {
+  height: 100%;
+  background-color: #85FFBD;
+  background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+}
+
+.example-card{
+  max-width: 350px;
 }
