--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../node_modules/bootswatch/dist/journal/bootstrap.min.css";
 @import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
-body{
+
+body {
   overflow-x: hidden;
 }
 
@@ -32,4 +41,14 @@ body{
   height: 338px;
   position: relative;
   overflow: hidden;
+}
+
+.backColor {
+  height: 100%;
+  background-color: #85FFBD;
+  background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+}
+
+.example-card {
+  max-width: 350px;
 }
