--- a/src/app/dashboard/about-me/about-me.component.scss
+++ b/src/app/dashboard/about-me/about-me.component.scss
@@ -30,11 +30,19 @@
   margin: 0 0.3rem;
   transform: translateY(-0rem);
 }
-@media only screen and(max-width: 768px){
-  .list-icon{
+
+.bubble {
+  position: absolute;
+  z-index: -2;
+  background: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+}
+
+@media only screen and(max-width: 768px) {
+  .list-icon {
     display: flex;
   }
-  .name-full{
+
+  .name-full {
     font-size: medium;
   }
 }
