--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,84 +1,40 @@
-<ng-container class="example-container" *ngIf="authService.userData as user">
-  <mat-toolbar class="example-toolbar" color="primary"
-    ><button
-      mat-icon-button
-      class="example-icon"
-      aria-label="Example icon-button with menu icon"
-    >
+<div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary" class="example-toolbar">
+    <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <span class="dashboard">Dashboard</span>
-    <span class="example-spacer"></span>
-    <span class="fs-5 text-center">{{ user.email }}</span>
-    <button
-      mat-icon-button
-      [matMenuTriggerFor]="menu"
-      class="example-icon favorite-icon"
-      aria-label="Example icon-button with heart icon"
-    >
-      <mat-icon>keyboard_arrow_down</mat-icon>
-    </button>
+    <h1 class="example-app-name">Dashboard</h1>
   </mat-toolbar>
-  <div class="container-fluid">
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>
-        <mat-icon>perm_identity</mat-icon>
-        <span>Profile Information</span>
-      </button>
-      <button mat-menu-item (click)="logout()">
-        <mat-icon>logout</mat-icon>
-        <span>Logout</span>
-      </button>
-    </mat-menu>
-    <div class="row">
-      <div class="col-lg-3 card-design">
-        <div *ngIf="authService.loadSpinner" class="linear-background"></div>
-        <mat-card #snav *ngIf="authService.loadSpinner == false">
-          <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>
-              {{ user.displayName ? user.displayName : "User" }}</mat-card-title
-            >
-            <mat-card-subtitle
-              >Verified: {{ user.emailVerified }}</mat-card-subtitle
-            >
-          </mat-card-header>
-          <mat-divider> </mat-divider>
-          <mat-action-list>
-            <div mat-subheader>Comunication</div>
-            <button mat-list-item>
-              <mat-icon
-                matBadge="15"
-                matBadgeColor="warn"
-                matBadgePosition="before"
-                matListIcon
-                >email</mat-icon
-              >
-              Inbox
-            </button>
-            <button mat-list-item>
-              <mat-icon matListIcon>label_important</mat-icon> Important
-            </button>
-            <button mat-list-item>
-              <mat-icon matListIcon>send</mat-icon> Sent
-            </button>
-            <div mat-subheader>Settings</div>
-            <button mat-list-item>
-              <mat-icon matListIcon>manage_accounts</mat-icon> Profile
-            </button>
-            <button mat-list-item>
-              <mat-icon matListIcon>article</mat-icon> Content Writer
-            </button>
-          </mat-action-list>
-        </mat-card>
-      </div>
-      <div class="col-lg-9 linear-background" *ngIf="authService.loadSpinner">
-        <div class="mt-3" *ngIf="authService.loadSpinner == false">
-          <mat-card> Hello </mat-card>
-          <mat-card> Hello </mat-card>
-          <mat-card> Hello </mat-card>
-        </div>
-      </div>
-    </div>
-  </div>
-</ng-container>
+
+  <mat-sidenav-container
+    class="example-sidenav-container"
+    [style.marginTop.px]="mobileQuery.matches ? 56 : 0"
+  >
+    <mat-sidenav
+      #snav
+      [mode]="mobileQuery.matches ? 'over' : 'side'"
+      [fixedInViewport]="mobileQuery.matches"
+      fixedTopGap="56"
+      opened
+    >
+      <mat-nav-list>
+        <a mat-list-item
+          ><mat-icon
+            matBadge="9"
+            matBadgePosition="before"
+            matBadgeColor="accent"
+            class="mr-1"
+            >inbox</mat-icon
+          >
+          Inbox</a
+        >
+        <a mat-list-item
+          ><mat-icon class="mr-1">label_important</mat-icon> Important</a
+        >
+        <a mat-list-item><mat-icon class="mr-1">send</mat-icon> Send</a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content> </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
