--- a/src/app/dashboard/about-me/about-me.component.html
+++ b/src/app/dashboard/about-me/about-me.component.html
@@ -1,75 +1,96 @@
-<nav class="navbar navbar-inverse navbar-expand-lg sticky-top navbar-light bg-info">
-  <div class="container fw-bold">
-    <a
-      class="navbar-brand text-uppercase name-full fw-bold fs-3"
-      style="color: white"
-      href="#forid"
-      >Md. Foridul Islam</a
-    >
-    <div class="d-flex justify-content-center"></div>
-    <ul class="navbar-nav list-icon">
-      <li class="nav-item">
-        <a
-          class="nav-link"
-          style="color: white"
-          href="https://www.linkedin.com/in/forid-islam-099860135/"
-          target="_blank"
-          ><i class="bi bi-linkedin"></i
-        ></a>
-      </li>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-info" id="navbar">
+    <div class="container fw-bold">
+      <a
+        class="navbar-brand text-uppercase name-full fw-bold fs-3"
+        style="color: white"
+        href="#forid"
+        >Md. Foridul Islam</a
+      >
+      <div class="d-flex justify-content-center"></div>
+      <ul class="navbar-nav list-icon">
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            style="color: white"
+            href="https://www.linkedin.com/in/forid-islam-099860135/"
+            target="_blank"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+        </li>
 
-      <li class="nav-item">
-        <a
-          class="nav-link"
-          style="color: white"
-          href="https://github.com/foridulislam21"
-          target="_blank"
-        >
-          <i class="bi bi-github"></i>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a
-          class="nav-link"
-          style="color: white"
-          href="https://web.facebook.com/forid.islam20/"
-          target="_blank"
-        >
-          <i class="bi bi-facebook"></i>
-        </a>
-      </li>
-    </ul>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div
-      class="collapse navbar-collapse justify-content-end text-uppercase fs-4"
-      id="navbarNav"
-    >
-      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" style="color: white" href="#about">About Me</a>
+          <a
+            class="nav-link"
+            style="color: white"
+            href="https://github.com/foridulislam21"
+            target="_blank"
+          >
+            <i class="bi bi-github"></i>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: white" href="#project">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" style="color: white" href="#contact">Contact</a>
+          <a
+            class="nav-link"
+            style="color: white"
+            href="https://web.facebook.com/forid.islam20/"
+            target="_blank"
+          >
+            <i class="bi bi-facebook"></i>
+          </a>
         </li>
       </ul>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse justify-content-end text-uppercase fs-4"
+        id="navbarNav"
+      >
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              data-page="about"
+              style="color: white"
+              href="#about"
+              >About Me</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              data-page="projects"
+              style="color: white"
+              href="#project"
+              >Projects</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              data-page="contact"
+              style="color: white"
+              href="#contact"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-<!--Bio-->
-<section id="forid" class="bio">
+  </nav>
+</header>
+<main>
+  <!--Bio-->
+  <section id="forid" class="bio">
     <div class="text-center">
       <img
         src="../../../assets/images/1.jpg"
@@ -78,156 +99,185 @@
         alt="Md. Foridul Islam"
       />
       <p class="fs-1 fw-bold lh-base" style="color: white">Md. Foridul Islam</p>
-      <p class="fs-4 fw-bold">
-        Full Stack Developer, Dhaka, Bangladesh.
+      <p class="fs-4 fw-bold">Full Stack Developer, Dhaka, Bangladesh.</p>
+    </div>
+  </section>
+  <!--Aoout Me-->
+  <section id="about">
+    <div *ngIf="loadSpinner" class="linear-background"></div>
+    <div *ngIf="loadSpinner == false" class="container">
+      <p class="fs-2 text-center text-uppercase fw-bold mt-5">About Me</p>
+      <div class="text-center styling">
+        <i class="bi bi-star-fill"></i>
+      </div>
+      <div class="row">
+        <div class="col-md-6 mt-5">
+          <p class="fs-5 lh-base" *ngFor="let item of abouts">
+            {{ item.description }}
+          </p>
+          <p class="fs-5">
+            <a
+              class="mr-1"
+              href="https://www.linkedin.com/in/forid-islam-099860135/"
+              target="_blank"
+              >See my LinkedIn profile</a
+            >for more career details.
+          </p>
+        </div>
+        <div class="col-md-6 mt-5">
+          <p class="fw-bold fs-2 text-uppercase">HighLight</p>
+          <ul class="fs-5 1h-base">
+            <li class="mt-4">
+              I got training from
+              <a href="https://pencilbox.edu.bd/" target="_blank"
+                >PencilBox Training Institute.</a
+              >
+            </li>
+            <li class="mt-4">
+              I complete my internship period at
+              <a href="https://enlightsolution.com/" target="_blank"
+                >Enlight Solutions</a
+              >
+            </li>
+            <li class="mt-4">
+              I got train from
+              <a
+                href="https://www.udemy.com/user/md-foridul-islam-5/"
+                target="_blank"
+                >Udemy</a
+              >
+              on
+              <a
+                href="https://github.com/foridulislam21/E-Commerce-App"
+                target="_blank"
+                >E-Commerce Application</a
+              >
+            </li>
+            <li class="mt-4">I can work under pressure.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!---Projects----->
+  <section id="project" class="projects">
+    <div *ngIf="loadSpinner" class="linear-background"></div>
+    <div class="container py-4">
+      <p class="fs-2 text-center text-uppercase fw-bold" style="color: white">
+        Projects
       </p>
-    </div>
-</section>
-<!--Aoout Me-->
-<section id="about">
-  <div *ngIf="loadSpinner" class="linear-background"></div>
-  <div *ngIf="loadSpinner == false" class="container">
-    <p class="fs-2 text-center text-uppercase fw-bold mt-5">About Me</p>
-    <div class="text-center styling">
-      <i class="bi bi-star-fill"></i>
-    </div>
-    <div class="row">
-      <div class="col-md-6 mt-5">
-        <p class="fs-5 lh-base" *ngFor="let item of abouts">
-          {{ item.description }}
-        </p>
-        <p class="fs-5">
-          <a
-            class="mr-1"
-            href="https://www.linkedin.com/in/forid-islam-099860135/"
-            target="_blank"
-            >See my LinkedIn profile</a
-          >for more career details.
-        </p>
+      <div class="text-center star">
+        <i class="bi bi-star-fill" style="color: white"></i>
       </div>
-      <div class="col-md-6 mt-5">
-        <p class="fw-bold fs-2 text-uppercase">HighLight</p>
-        <ul class="fs-5 1h-base">
-          <li class="mt-4">
-            I got training from
-            <a href="https://pencilbox.edu.bd/" target="_blank"
-              >PencilBox Training Institute.</a
-            >
-          </li>
-          <li class="mt-4">
-            I complete my internship period at
-            <a href="https://enlightsolution.com/" target="_blank"
-              >Enlight Solutions</a
-            >
-          </li>
-          <li class="mt-4">
-            I got train from
-            <a
-              href="https://www.udemy.com/user/md-foridul-islam-5/"
-              target="_blank"
-              >Udemy</a
-            >
-            on
-            <a
-              href="https://github.com/foridulislam21/E-Commerce-App"
-              target="_blank"
-              >E-Commerce Application</a
-            >
-          </li>
-          <li class="mt-4">I can work under pressure.</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-<!---Projects----->
-<section id="project" class="projects">
-  <div *ngIf="loadSpinner" class="linear-background"></div>
-  <div class="container py-4">
-    <p class="fs-2 text-center text-uppercase fw-bold" style="color: white">
-      Projects
-    </p>
-    <div class="text-center star">
-      <i class="bi bi-star-fill" style="color: white"></i>
-    </div>
-    <div class="row mt-3" style="color: white">
-      <div class="col-lg-6">
-        <p class="fs-5">My personal interests include:</p>
-        <ul class="mt-2">
-          <li>
-            <p class="fs-5 fw-bold">E-Commerce Application</p>
-            <ul class="fs-6">
-              <li>Build with Angular</li>
-              <li>For RealTime database I use Firebase</li>
-              <li>Hosting it on Firebase</li>
-              <li>
-                <a
-                  style="color: white"
-                  href="https://midstreetcafe-a49a2.firebaseapp.com/"
-                  target="_blank"
-                  >Click on it for take a look</a
-                >
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <div class="col-lg-6">
-        <p class="fs-3 fw-bold">CURRENT JOB</p>
-        <ul>
-          <p class="fs-4 fw-bold">Company Name: <a href="https://www.udemy.com/user/md-foridul-islam-5/" target="_blank" rel="noopener noreferrer">Udemy</a></p>
-          <p class="fs-4 fw-bold">Job & Responsibility: <strong>Professional Training</strong></p>
-        </ul>
-        <ul class="mt-2">
-          <li>
-            <p class="fs-5 fw-bold">Project: E-Commerce Application</p>
-            <ul class="fs-6">
-              <li>
-                Learn how to use the Repository, Unit of Work and specification
-                pattern in .net core
-              </li>
-              <li>Using ASP.NET Identity for login and registration</li>
-              <li>Using Redis to store the shopping basket</li>
-              <li>
-                Accepting payments via Stripe using the new EU standards for 3D
-                secure
-              </li>
-              <li>Publishing the application to Linux</li>
-            </ul>
-          </li>
-        </ul>
-        <p class="fs-3 fw-bold">Previous JOB</p>
-        <ul>
-          <p class="fs-4 fw-bold">Company Name: <a href="https://enlightsolution.com/" target="_blank">Enlight Solutions</a></p>
-          <p class="fs-4 fw-bold">Job & Responsibility: Internship Program</p>
-        </ul>
-        <ul class="mt-2">
-          <li>
+      <div class="row mt-3" style="color: white">
+        <div class="col-lg-6">
+          <p class="fs-5">My personal interests include:</p>
+          <ul class="mt-2">
+            <li>
+              <p class="fs-5 fw-bold">E-Commerce Application</p>
+              <ul class="fs-6">
+                <li>Build with Angular</li>
+                <li>For RealTime database I use Firebase</li>
+                <li>Hosting it on Firebase</li>
+                <li>
+                  <a
+                    style="color: white"
+                    href="https://midstreetcafe-a49a2.firebaseapp.com/"
+                    target="_blank"
+                    >Click on it for take a look</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-6">
+          <p class="fs-4 fw-bold">CURRENT JOB</p>
+          <ul>
+            <p class="fs-5 fw-bold">
+              Employment Type: <strong>Online Professional Training</strong>
+            </p>
+
+            <p class="fs-5 fw-bold">
+              Company:
+              <a
+                href="https://www.udemy.com/user/md-foridul-islam-5/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Udemy</a
+              >
+            </p>
+            <p class="fs-5 fw-bold">
+              Project: <strong>E-Commerce Application</strong>
+            </p>
+            <p class="fs-4 fw-bold">Job & Responsibility:</p>
+          </ul>
+          <ul class="mt-2" style="text-decoration: none; list-style: none">
+            <li>
+              <ul class="fs-6">
+                <li>
+                  Learn how to use the Repository, Unit of Work and
+                  specification pattern in .net core
+                </li>
+                <li>Using ASP.NET Identity for login and registration</li>
+                <li>Using Redis to store the shopping basket</li>
+                <li>
+                  Accepting payments via Stripe using the new EU standards for
+                  3D secure
+                </li>
+                <li>Publishing the application to Linux</li>
+              </ul>
+            </li>
+          </ul>
+          <p class="fs-4 fw-bold">Previous JOB</p>
+          <ul>
+            <p class="fs-5 fw-bold">
+              Employment Type: <strong>Internship</strong>
+            </p>
+            <p class="fs-5 fw-bold">
+              Company:
+              <a href="https://enlightsolution.com/" target="_blank"
+                >Enlight Solutions</a
+              >
+            </p>
             <p class="fs-5 fw-bold">Project: Assessment Management System</p>
-            <ul class="fs-6">
-              <li>
-                Learn how to use the Repository Pattern and also apply bussines logic layer artitecture.
-              </li>
-              <li>Using JWT Authentication for login and registration</li>
-              <li>Using <strong>Bootstrap & Material Design</strong> for creating a page. </li>
-              <li>
-                Learn how to use <strong>Dependency Inversion Principle</strong> in a project.
-              </li>
-              <li>Create documentation for every particular work that I am done.</li>
-            </ul>
-          </li>
-        </ul>
+            <p class="fs-4 fw-bold">Job & Responsibility:</p>
+          </ul>
+          <ul class="mt-2" style="text-decoration: none; list-style: none">
+            <li>
+              <ul class="fs-6">
+                <li>
+                  Learn how to use the Repository Pattern and also apply
+                  bussines logic layer artitecture.
+                </li>
+                <li>Using JWT Authentication for login and registration</li>
+                <li>
+                  Using <strong>Bootstrap & Material Design</strong> for
+                  creating a page.
+                </li>
+                <li>
+                  Learn how to use
+                  <strong>Dependency Inversion Principle</strong> in a project.
+                </li>
+                <li>
+                  Create documentation for every particular work that I am done.
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-</section>
-<!----Contact----->
-<section id="contact" class="contact">
-  <div *ngIf="loadSpinner" class="linear-background"></div>
-  <app-contact></app-contact>
-</section>
+  </section>
+  <!----Contact----->
+  <section id="contact" class="contact">
+    <div *ngIf="loadSpinner" class="linear-background"></div>
+    <app-contact></app-contact>
+  </section>
+</main>
+
 <footer class="footer mt-3 py-3 bg-info">
-  <div class="container text-center" style="color: white;">
+  <div class="container text-center" style="color: white">
     <span class="">Copyright©2021</span>
   </div>
 </footer>
